<resources>
    <string name="app_name">app</string>
    <string name="volunteer_opportunities">Volunteer Opportunities</string>
    <string name="thank_you">Thank You!</string>
    <string name="community_outreach">Community Outreach</string>
    <string name="donate">Donate</string>
    <string name="your_willingness_to_help_out_others_in_your_community_can_make_all_the_difference_in_someones_life">Your willingness to help out others in your community can make all the difference in someones life.</string>
    <string name="test">TEST</string>
    <string name="volunteering">Volunteering</string>
    <string name="make_a_donation">Make a Donation</string>
    <string name="textview">TextView</string>
    <string name="search">Search</string>
    <string name="search_for_charities">Search for charities</string>
    <string name="charities_near_you">Charities in Worcester</string>
    <string name="catholic_charities">Catholic Charities</string>
    <string name="phone">Phone:</string>
    <string name="_508_798_0191">(508) 798-0191</string>
    <string name="address">Address:</string>
    <string name="_508_756_5486">(508) 756-5486</string>
    <string name="_52_high_st">52 High St.</string>
    <string name="catholic_charity">Catholic Charity</string>
    <string name="worcester_ma_01610">Worcester, MA 01610</string>
    <string name="todo">TODO</string>
    <string name="el_buen_samaritano_food_program">El Buen Samaritano Food Program</string>
    <string name="_52_high_st_worcester_ma_01609">52 High St, Worcester, MA 01609</string>
    <string name="abby_kelly_foster_house">Abby Kelly Foster House</string>
    <string name="_39_piedmont_st_worcester_ma_01610">39 Piedmont St, Worcester, MA 01610</string>
    <string name="firstlast">FirstLast</string>
    <string name="location">Location</string>
    <string name="see_requests_for_assistance_from_those_in_need_nearby">See requests for assistance from those in need nearby</string>
    <string name="micheal_joseph">Micheal Joseph</string>
    <string name="angelica_ross">Angelica Ross</string>
    <string name="worcester">Worcester</string>
    <string name="requesting_if_anyone_has_any_canned_food_they_could_donate_i_would_be_very_greatful">Requesting: If anyone has any canned food they could donate I would be very greatful.</string>
    <string name="requesting_does_anyone_have_mens_size_12_shoes_mine_are_almost_worn_out">Requesting: Does anyone have mens size 12 shoes? Mine are almost worn out.</string>
    <string name="connect">Connect</string>
    <string name="gilfoyle_carter">Gilfoyle Carter</string>
    <string name="requesting_my_car_broke_down_is_anyone_available_to_carpool_to_downtown_worcester_tomorrow">Requesting: My car broke down, is anyone available to carpool to downtown worcester tomorrow?</string>
    <string name="tom_shepherd">Tom Shepherd</string>
    <string name="jacob_saulnier">Jacob Saulnier</string>
    <string name="requesting_i_have_experiance_fixing_cars_does_anyone_know_of_any_mechanic_job_openings">Requesting: I have experiance fixing cars, does anyone know of any mechanic job openings?</string>
    <string name="requesting_need_size_medium_shirts_for_my_son">Requesting: Need size medium shirts for my son</string>
    <string name="worcester_soup_kitchen">Worcester Soup Kitchen</string>
    <string name="looking_for_people_to_come_help_us_make_and_distribute_food">Looking for people to come help us make and distribute food</string>
    <string name="search_for_nearby_volunteering_opportunities">Search for nearby volunteering opportunities</string>
    <string name="sorry_there_are_no_more_volunteering_opportunities_currently_available_try_again_later">Sorry, there are no more volunteering opportunities currently available. Try again later.</string>
    <string name="we_re_here_to_help">We are here to help</string>
    <string name="we_know_times_are_tough_but_things_will_get_better_let_your_community_help_you_back_on_your_feet">We know times are tough, but things will get better. Let your community help you back on your feet.</string>
    <string name="shelters">Shelters</string>
    <string name="food_banks">Food Banks</string>
    <string name="hotlines">Hotlines</string>
    <string name="i_want_to_help">I Want To Help</string>
    <string name="log_in">Log In</string>
    <string name="i_need_help">I Need Help</string>
    <string name="food_banks_in_worcester">Food Banks in Worcester</string>
    <string name="st_oscar_romero_food_pantry">St. Oscar Romero Food Pantry</string>
    <string name="previous_requests">Previous Requests</string>
    <string name="make_a_request">Make a Request</string>
    <string name="if_you_are_in_need_of_something_make_a_request_we_will_match_you_with_someone_who_can_help_meet_your_needs">If you are in need of something make a request, we will match you with someone who can help meet your needs</string>
    <string name="submit">Submit</string>
    <string name="write_request">Write Request</string>

</resources>