<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/thankYou"
        android:layout_width="238dp"
        android:layout_height="51dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:text="@string/thank_you"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/volOps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/volOps"
        android:layout_width="367dp"
        android:layout_height="67dp"
        android:layout_marginBottom="332dp"
        android:text="@string/volunteer_opportunities"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/donate"
        android:layout_width="365dp"
        android:layout_height="66dp"
        android:layout_marginTop="64dp"
        android:text="@string/donate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comOut"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/comOut"
        android:layout_width="365dp"
        android:layout_height="66dp"
        android:layout_marginTop="64dp"
        android:text="@string/community_outreach"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/volOps"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/message"
        android:layout_width="304dp"
        android:layout_height="100dp"
        android:autoText="false"
        android:gravity="center"
        android:text="@string/your_willingness_to_help_out_others_in_your_community_can_make_all_the_difference_in_someones_life"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/volOps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thankYou"
        app:layout_constraintVertical_bias="0.269" />

</androidx.constraintlayout.widget.ConstraintLayout>