<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/donateText"
        android:layout_width="285dp"
        android:layout_height="67dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/make_a_donation"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="363dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="550dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donateText" />

    <ScrollView
        android:layout_width="411dp"
        android:layout_height="529dp"
        android:layout_marginTop="21dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nearYou"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/charities_near_you"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#000000"
                android:textSize="28sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/Catholic"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_gravity="fill"
                android:background="#A4FFC107"
                app:cardBackgroundColor="#A4FFC107"
                app:cardCornerRadius="35dp"
                app:contentPaddingBottom="50dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="158dp">

                    <TextView
                        android:id="@+id/desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="19dp"
                        android:layout_marginEnd="81dp"
                        android:layout_marginRight="81dp"
                        android:layout_marginBottom="3dp"
                        android:text="Low income families and individuals"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/descLabel"
                        app:layout_constraintTop_toBottomOf="@+id/addressName" />

                    <TextView
                        android:id="@+id/descLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="29dp"
                        android:layout_marginLeft="29dp"
                        android:layout_marginTop="19dp"
                        android:layout_marginBottom="15dp"
                        android:text="Description:"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/desc"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/addressName" />

                    <TextView
                        android:id="@+id/catholicName"
                        android:layout_width="271dp"
                        android:layout_height="28dp"
                        android:layout_marginTop="16dp"
                        android:gravity="center_horizontal"
                        android:text="@string/catholic_charities"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/phoneLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="28dp"
                        android:layout_marginLeft="28dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="79dp"
                        android:text="@string/phone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/phone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/catholicName" />

                    <TextView
                        android:id="@+id/phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="242dp"
                        android:layout_marginRight="242dp"
                        android:layout_marginBottom="79dp"
                        android:text="@string/_508_798_0191"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/phoneLabel"
                        app:layout_constraintTop_toBottomOf="@+id/catholicName" />

                    <TextView
                        android:id="@+id/addressName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="192dp"
                        android:layout_marginRight="192dp"
                        android:text="@string/worcester_ma_01610"
                        app:layout_constraintBottom_toTopOf="@+id/desc"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/addressLabel"
                        app:layout_constraintTop_toBottomOf="@+id/phone" />

                    <TextView
                        android:id="@+id/addressLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="29dp"
                        android:layout_marginLeft="29dp"
                        android:text="@string/address"
                        app:layout_constraintBottom_toTopOf="@+id/descLabel"
                        app:layout_constraintEnd_toStartOf="@+id/addressName"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/phoneLabel" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>